package view.vCells;

import isel.leic.pg.Console;
import model.Cell;
import view.CellTile;

public class vSpace extends CellTile {
    public vSpace(Cell cell) {
        super(cell);
    }

    @Override
    public void paint() {
        //Nothing
    }
}
